# captains-chair

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  plugin-package.yml
codex-plugin/captains-chair/: .mcp.json  README.md
codex-plugin/make-it-so/: .mcp.json  README.md
config/: config.example.yaml
docs/: ACCEPTANCE_EVIDENCE.md  ADAPTERS.md  ARCHITECTURE.md  FUTURE_RUNTIME_ADAPTERS.md  OPENCLAW_OPERATIONS.md  PRODUCT_REORIENTATION.md  TESTING.md  USAGE.md
docs/canaries/: PRINTHUB.md
examples/: project.yaml
openclaw-plugin/: openclaw.plugin.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
openclaw-plugin/scripts/: install-sidebar-rocket.mjs
openclaw-plugin/src/: control-ui-auth.ts  index.ts  schedules.ts  sidecar.ts
openclaw-plugin/tests/: control-ui-auth.test.ts  dashboard-fixture.mjs  host-registration.mjs  package.mjs  registration.test.ts  schedules.test.ts  sidebar-icon.test.ts  sidecar.test.ts  ui-contract.test.ts
openclaw-plugin/tests-e2e/: dashboard.spec.ts
openclaw-plugin/ui/: index.html  package-lock.json  package.json  vite.config.ts
openclaw-plugin/ui-tests/: app.test.tsx
packaging/: sidecar_entry.py
schemas/: config.schema.json  course.schema.json  project-manifest.schema.json  token-usage-record.schema.json
scripts/: build_sidecar.py  check_coverage.py
skills/captains-chair/: SKILL.md
skills/make-it-so/: SKILL.md
src/captains_chair/: __init__.py  __main__.py  adapters.py  baseline.py  canary.py  cli.py  completion_gate.py  config.py  conformance.py  courses.py  direct_orchestrator.py  direct_workers.py  documents.py  engine.py  github.py  harness.py  merge_gate.py  model_policy.py  models.py  notifications.py  openclaw_runtime.py  openclaw_usage.py  openclaw_workboard.py  orchestration.py  policy.py  prompting.py  qa.py  queue_events.py  readiness.py  runtime.py  scheduler.py  sidecar.py  state.py  usage.py  worktrees.py
tests/: fakes.py  helpers.py  test_acceptance_cli.py  test_acceptance_edges.py  test_acceptance_sidecar.py  test_active_pr_flow.py  test_adapters.py  test_baseline_batches.py  test_baseline_collector.py  test_canary.py  test_capability_qa.py  test_checks.py  test_cli_helpers.py  test_cli_orchestration.py  test_codex_plugin.py  test_codex_process_e2e.py  test_completion_gate.py  test_config.py  test_contract_edge_cases.py  test_courses.py  test_direct_orchestrator.py  test_direct_worker_execution.py  test_disabled_mode.py  test_disposable_repository_e2e.py  test_documents.py  test_engine_control.py  test_engine_helpers.py  test_engine_workboard_e2e.py  test_entrypoint.py  test_github_provider.py  test_harness.py  test_json_tools.py  test_merge_gate.py  test_milestone_evidence_flow.py  test_milestones.py  test_model_contract_edges.py  test_model_policy.py  test_model_validation_edges.py  test_notifications.py  test_openclaw_conformance.py  (+22 more)
(+63 files in other folders)
