[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "captains-chair"
version = "0.2.0"
description = "An open-source, harness-neutral SDLC control plane that puts the builder in command of an agent crew."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "mln330" }]
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pyright>=1.1.400",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.9",
]

[project.scripts]
captains-chair = "captains_chair.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/captains_chair"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
