[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "make-it-so"
version = "0.2.4"
description = "An open-source, harness-neutral SDLC control plane that puts the builder in command of an agent crew."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "mln330" }]
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hypothesis>=6.100",
  "mutmut>=3.6,<4",
  "pyright>=1.1.400",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.9",
]

[project.scripts]
make-it-so = "make_it_so.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/make_it_so"]

[tool.hatch.build]
exclude = [
  "/openclaw-plugin/node_modules",
  "/openclaw-plugin/ui/node_modules",
  "/openclaw-plugin/dist",
  "/openclaw-plugin/ui/dist",
  "/dist",
  "/coverage.json",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.mutmut]
source_paths = ["src/make_it_so"]
only_mutate = [
  "src/make_it_so/model_policy.py",
  "src/make_it_so/merge_gate.py",
  "src/make_it_so/policy.py",
  "src/make_it_so/state.py",
  "src/make_it_so/orchestration.py",
]
pytest_add_cli_args_test_selection = [
  "tests/test_model_policy.py",
  "tests/test_merge_gate.py",
  "tests/test_policy.py",
  "tests/test_state.py",
  "tests/test_orchestration.py",
  "tests/test_properties.py",
]
mutate_only_covered_lines = true
max_stack_depth = 20
